トップページ完成（新着商品一覧以外)

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,7 @@
 
   <body>
     <header>
-    <%= if admin_signed_in? %>
-        <%= if request.fullpath.include? "/admin" %>
+    <% if admin_signed_in? %>
         <li>
           <%= link_to "商品一覧", admin_items_path %>
         </li>
@@ -29,23 +28,7 @@
         <li>
           <%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
         </li>
-      <% else %>
-        <li>
-          <%= link_to "About", about_path %>
-        </li>
-        <li>
-          <%= link_to "商品一覧", items_path %>
-        </li>
-        <li>
-          <%= link_to "新規登録", new_public_registration_path %>
-        </li>
-        <li>
-          <%= link_to "ログイン", new_public_session_path %>
-        </li>
-      <% end %>
-    
-    <!--顧客側-->
-      <%= elsif public_signed_in? %>
+    <% elsif customer_signed_in? %>
         <li>
           <%= link_to "マイページ", customers_my_page_path %>
         </li>
@@ -56,7 +39,7 @@
           <%= link_to "カート", cart_items_path %>
         </li>
         <li>
-          <%= link_to "ログアウト", destroy_public_session_path, method: :delete %>
+          <%= link_to "ログアウト", destroy_customer_session_path, method: :delete %>
         </li>
       <% else %>
         <li>
@@ -66,13 +49,12 @@
           <%= link_to "商品一覧", items_path %>
         </li>
         <li>
-          <%= link_to "新規登録", new_public_registration_path %>
+          <%= link_to "新規登録", new_customer_registration_path %>
         </li>
         <li>
-          <%= link_to "ログイン", new_public_session_path %>
+          <%= link_to "ログイン", new_customer_session_path %>
         </li>
       <% end %>
-    <% end %>
     </header>
     <%= yield %>
   </body>
