--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -15,7 +15,7 @@
        <td><u><%= link_to order.created_at.strftime('%Y/%m/%d %H:%M/%S'), admin_order_path %></u></td>
        <td><%= order.customer.full_name %></td>
        <td><%= order.order_item.sum(:amount) %></td>
-       <td><%= order.status </td>
+       <td><%= order.status_i18n %></td>
       </tr>
     <% end %>
   </tbody>
