--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,67 +12,49 @@
 
   <body>
     <header>
-    <%= if admin_signed_in? %>
-        <%= if request.fullpath.include? "/admin" %>
+      <% if admin_signed_in? %>
         <li>
-          <%= link_to "商品一覧", admin_items_path %>
+         <%= link_to "商品一覧", admin_items_path %>
         </li>
         <li>
-          <%= link_to "顧客一覧", admin_customers_path %>
+         <%= link_to "顧客一覧", admin_customers_path %>
         </li>
         <li>
-          <%= link_to "注文履歴一覧",admin_root_path %>
+         <%= link_to "注文履歴一覧",admin_root_path %>
         </li>
         <li>
-          <%= link_to "ジャンル", admin_genres_path %>
+         <%= link_to "ジャンル", admin_genres_path %>
         </li>
         <li>
-          <%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
+         <%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
         </li>
-      <% else %>
+      <% elsif customer_signed_in? %>
         <li>
-          <%= link_to "About", about_path %>
-        </li>
-        <li>
-          <%= link_to "商品一覧", items_path %>
+         <%= link_to "マイページ", customers_my_page_path %>
         </li>
         <li>
-          <%= link_to "新規登録", new_public_registration_path %>
+         <%= link_to "商品一覧", items_path %>
         </li>
         <li>
-          <%= link_to "ログイン", new_public_session_path %>
-        </li>
-      <% end %>
-    
-    <!--顧客側-->
-      <%= elsif public_signed_in? %>
-        <li>
-          <%= link_to "マイページ", customers_my_page_path %>
+         <%= link_to "カート", cart_items_path %>
         </li>
         <li>
-          <%= link_to "商品一覧", items_path %>
+         <%= link_to "ログアウト", destroy_customer_session_path, method: :delete %>
+        </li>
+       <% else %>
+        <li>
+         <%= link_to "About", about_path %>
         </li>
         <li>
-          <%= link_to "カート", cart_items_path %>
+         <%= link_to "商品一覧", items_path %>
         </li>
         <li>
-          <%= link_to "ログアウト", destroy_public_session_path, method: :delete %>
-        </li>
-      <% else %>
-        <li>
-          <%= link_to "About", about_path %>
+         <%= link_to "新規登録", new_customer_registration_path %>
         </li>
         <li>
-          <%= link_to "商品一覧", items_path %>
+         <%= link_to "ログイン", new_customer_session_path %>
         </li>
-        <li>
-          <%= link_to "新規登録", new_public_registration_path %>
-        </li>
-        <li>
-          <%= link_to "ログイン", new_public_session_path %>
-        </li>
-      <% end %>
-    <% end %>
+       <% end %>
     </header>
     <%= yield %>
   </body>
