--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -22,7 +22,7 @@
 
         <!--<tr>-->
         <!--  <td>ジャンル</td>-->
-        <!--  <td><%#= f.select :genre, @genres, { include_blank: '選択してください' } %></td>-->
+        <!--  <td><%#= f.select :genre_id, @genres, { include_blank: '選択してください' } %></td>-->
         <!--</tr>-->
 
         <tr>
