--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -25,7 +25,7 @@
                 <td><%= item.id %></td>
 
                 <td>
-                  <%= link_to admin_item_path(item.id) do %>
+                  <%= link_to customers_item_path(item.id) do %>
                     <%= item.name %>
                   <% end %>
                 </td>
