--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -2,11 +2,11 @@
   <div class="row">
     <div class="col-md-3">
       <h4>商品詳細</h4>
-      <%= image_tag @image.item_image, size: "400x300" if @item.item_image.attached? %>
+      <%= image_tag @image.item_image, size: "400x300" %>
     </div>
 
     <div class="col-md-8 mt-4">
-      <table class="table">
+      <div class="table">
         <tr>
           <td>商品名</td>
           <td><%= @item.name %></td>
@@ -28,14 +28,11 @@
         </tr>
 
         <tr>
-          <td>販売ステータス</td>
+          <td></td>
           <td><%= @item.is_sale %></td>
         </tr>
 
-        <tr>
-          <td><%= link_to "編集する", edit_admin_item_path(@item), class: "btn" %></td>
-        </tr>
-      </table>
+      </div>
     </div>
   </div>
 </div>
