--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,29 +1,70 @@
-<h2>Sign up</h2>
+<h2>新規会員登録</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "publics/shared/error_messages", resource: resource %>
+
+  <%= render "public/shared/error_messages", resource: resource %>
 
   <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    名前
+
+    （姓）
+    <%= f.text_field :last_name, placeholder: "令和", autofocus: true, autocomplete: "last_name" %>
+
+    （名）
+    <%= f.text_field :first_name, placeholder: "道子", autofocus: true, autocomplete: "first_name" %>
+  </div>
+
+
+  <div class="field">
+    フリガナ
+
+    （セイ）
+    <%= f.text_field :first_name_kana, placeholder: "レイワ", autofocus: true, autocomplete: "first_name_kana" %>
+
+    （メイ）
+    <%= f.text_field :first_name_kana, placeholder: "ミチコ", autofocus: true, autocomplete: "first_name_kana" %>
   </div>
 
   <div class="field">
-    <%= f.label :password %>
+    メールアドレス
+    <%= f.email_field :email, placeholder: "sample@example.com", autofocus: true, autocomplete: "email" %>
+  </div>
+
+  <div class="field">
+    郵便番号（ハイフンなし）
+    <%= f.text_field :post_code, placeholder: "0000000", autofocus: true, autocomplete: "post_code" %>
+  </div>
+
+  <div class="field">
+    住所
+    <%= f.text_field :address, placeholder: "東京都渋谷代々木神園町0-0", autofocus: true, autocomplete: "address" %>
+  </div>
+
+  <div class="field">
+    電話番号（ハイフンなし）
+    <%= f.text_field :phone_number, placeholder: "00000000000", autofocus: true, autocomplete: "phone_number" %>
+  </div>
+
+  <div class="field">
+  
     <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
+    (パスワード<%= @minimum_password_length %>文字以上)
+    <% end %>
     <%= f.password_field :password, autocomplete: "new-password" %>
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
+    パスワード（確認用）
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "新規登録" %>
   </div>
 <% end %>
+
+<h2>既に登録済みの方</h2>
+
+<h4><%= link_to "こちら", new_customer_session_path %> からログインしてください。</h4>
 
 <%= render "public/shared/links" %>
