--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,6 +55,7 @@
            <%= link_to "ログイン", new_customer_session_path %>
           </li>
         <% end %>
+        <%= yield %>
     </header>
 
   </body>
