--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -1,6 +1,6 @@
 <h2>配送先登録/一覧</h2>
 
-<%= form_with model: @address, url: addresses_path, method: :post do |f| %>
+<%= form_with model: @address, url: addresses_path, local: true, method: :post do |f| %>
 
   <div>
   郵便番号（ハイフンなし）
