カートの制作・エラーだらけ

--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,14 +1,58 @@
+<!--カート内商品一覧-->
+
 <div class="container">
   <div class="row">
     <div class="col">
       <h2>カート商品</h2>
-      <%#= link_to "カート内を空にする", cart_items_path.destroy_all, method: :delete,
-                  "data-confirm" => "本当に空にしますか？"%>
+      <%= link_to "カート内を空にする", cart_items_path.destroy_all, method: :delete,
+                  "data-confirm" => "本当に空にしますか？", class: "btn"%>
     </div>
-    
+
     <div class="row">
       <div class="col">
-        
+          <div class="table">
+            <thead>
+              <th>商品名</th>
+              <th>単価（税込）</th>
+              <th>数量</th>
+              <th>小計</th>
+              <th><br></th>
+            </thead>
+
+            <tbody>
+            <%= @sum = 0 %>
+            <%= @cart_items.each do |cart_item|%>
+
+            <tr>
+              <!--<td>商品名</td>-->
+              <td><%= cart_item.item.name %></td>
+
+              <!--<td>単価（税込）</td>-->
+              <td><%= cart_item.item.add_tax_price %></td>
+
+
+              <!--<td>数量</td>-->
+              <td>
+                <%= form_with model: cart_item, url: cart_items_path(cart_item.id), local: true do |f|%>
+                <%= f.select :amount, *[1..10] %>
+                <%= f.submit "変更", class: "btn"%>
+                <% end %>
+              </td>
+
+
+              <!--<td>小計</td>-->
+              <td><%= cart_item.subtotal %></td>
+
+              <!--<td>#削除</td>-->
+              <td><%= link_to "削除", destory_cart_item_path(cart_item.id) , method: :delete, "data-confirm" => "商品を削除しますか？", class: "btn"%></td>
+            </tr>
+            <%= @sum += cart_item.subtotal%>
+          </tbody>
+        </div>
+        <%= link_to "買い物を続ける", items_path, class="btn"%>
+        <%= "合計金額", @sum %>
+
+        <%= link_to "情報入力に進む", new_order_path, class="btn" %>
       </div>
     </div>
   </div>
