--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,9 +1,28 @@
 <h2>新規会員登録</h2>
 
 
-<%= form_with model: resource, url: new_customer_registration_path do |f| %>
+<%= form_with model: resource, url: customer_registration_path do |f| %>
   <%= render "public/shared/error_messages", resource: resource %>
 
+   <div class="field">
+    (姓)
+    <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name" %>
+  </div>
+  
+     <div class="field">
+    （名）
+    <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name" %>
+  </div>
+  
+     <div class="field">
+    （セイ）
+    <%= f.text_field :last_name_kana, placeholder: "sample@example.com", autofocus: true, autocomplete: "last_name_kana" %>
+  </div>
+  
+     <div class="field">
+    （メイ）
+    <%= f.text_field :first_name_kana, placeholder: "sample@example.com", autofocus: true, autocomplete: "first_name_kana" %>
+  </div>
 
   <div class="field">
     メールアドレス
@@ -26,7 +45,7 @@
   </div>
 
   <div class="field">
-  
+
     <% if @minimum_password_length %>
     (パスワード<%= @minimum_password_length %>文字以上)
     <% end %>
@@ -43,8 +62,5 @@
   </div>
 <% end %>
 
-<h2>既に登録済みの方</h2>
-
-<h4><%= link_to "こちら", new_customer_session_path %> からログインしてください。</h4>
 
 <%= render "public/shared/links" %>
