--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,9 @@
            <%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
           </li>
             <% elsif customer_signed_in? %>
+            
+            <%= current_user.name %>
+            
           <li>
            <%= link_to "マイページ", customers_my_page_path %>
           </li>
