顧客マイページ完成

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
           </li>
             <% elsif customer_signed_in? %>
             
-            <%= current_user.name %>
+            <%= current_customer.last_name %>
             
           <li>
            <%= link_to "マイページ", customers_my_page_path %>
