routes統合のために一旦セーブ

--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -22,7 +22,9 @@
 
         <tr>
           <td>ジャンル</td>
-          <td><%= f.select :genre_id, @genres,  { include_blank: '選択してください' } %></td>
+          <td>
+            <%= f.select :genre_id,@genres,{ include_blank: "-- 選択してください --" }%>
+          </td>
         </tr>
 
         <tr>
