--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -23,7 +23,7 @@
         <tr>
           <td>ジャンル</td>
           <td>
-            <%= f.select :genre_id,@genres,{ include_blank: "-- 選択してください --" }%>
+            <%= f.collection_select :genre_id, @genres, :id, :name, { include_blank: "-- 選択してください --" }%>
           </td>
         </tr>
 
