--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-3">
       <h4>商品詳細</h4>
-      <%= image_tag @image.item_image, size: "400x300" if @item.item_image.attached? %>
+      <%= image_tag @item.item_image, size: "400x300" if @item.item_image.attached? %>
     </div>
 
     <div class="col-md-8 mt-4">
@@ -24,7 +24,7 @@
 
         <tr>
           <td>税込価格(税抜き価格)</td>
-          <td><%= @price.add_tax_price.to_s(:dalimited) %></td>
+          <td><%= @item.add_tax_price %></td>
         </tr>
 
         <tr>
