--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -47,12 +47,13 @@
               <td><%= link_to "削除", destory_cart_item_path(cart_item.id) , method: :delete, "data-confirm" => "商品を削除しますか？", class: "btn"%></td>
             </tr>
             <%= @sum += cart_item.subtotal%>
+            <% end %>
           </tbody>
         </div>
-        <%= link_to "買い物を続ける", items_path, class="btn"%>
-        <%= "合計金額", @sum %>
+        <%= link_to "買い物を続ける", items_path, class: "btn"%>
+        "合計金額"<%= @sum %>
 
-        <%= link_to "情報入力に進む", new_order_path, class="btn" %>
+        <%= link_to "情報入力に進む", new_order_path, class: "btn" %>
       </div>
     </div>
   </div>
