--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,20 +1,29 @@
 <h2>会員一覧</h2>
 
-会員ID
-氏名
-メールアドレス
-ステータス
+<table>
+  <thead>
+    <tr>
+      <th>会員ID</th>
+      <th>氏名</th>
+      <th>メールアドレス</th>
+      <th>ステータス</th>
+    </tr>
+  </thead>
 
-<% @customers.each do |customer| %>
-
-<%= customer.id %>
-
-<%= limk to customer.last_name customer.first_name, admin_customer_path(customer)  %>
-
-<%= customer.email %>
-
-<% if customer.is_deleted == true %>
-  退会
-<% else %>
-  有効
-<% end %>
+  <tbody>
+    <% @customers.each do |customer| %>
+    <tr>
+      <td><%= customer.id %></td>
+      <td><%= link_to customer.last_name, admin_customer_path(customer) %></td>
+      <td><%= customer.email %></td>
+      <td>
+        <% if customer.is_deleted == true %>
+          <p>退会</p>
+        <% else %>
+          <p>有効</p>
+        <% end %>
+      </td>
+    </tr>
+    <% end %>
+  </tbody>
+</table>
