--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,42 +1,42 @@
 
 
-<%= @customer.last_name %> <%= @customer.first_name %>さんの会員詳細
+<%= @customer.last_name %><%= @customer.first_name %>さんの会員詳細<br/>
 
 会員ID
-<%= @customer.id %>
+<%= @customer.id %><br/>
 
 
 氏名
 <%= @customer.last_name %>
 
-<%= @customer.first_name %>
+<%= @customer.first_name %><br/>
 
 
 フリガナ
 <%= @customer.last_name_kana %>
 
-<%= @customer.first_name_kana %>
+<%= @customer.first_name_kana %><br/>
 
 郵便番号
-<%= @customer.post_code %>
+<%= @customer.post_code %><br/>
 
 住所
-<%= @customer.address %>
+<%= @customer.address %><br/>
 
 電話番号
-<%= @customer.phone_number %>
+<%= @customer.phone_number %><br/>
 
 メールアドレス
-<%= @customer.email %>
+<%= @customer.email %><br/>
 
 会員ステータス
 <% if @customer.is_deleted == true %>
   退会
 <% else %>
   有効
-<% end %>
+<% end %><br/>
 
 
-<% link to "編集する", edit_admin_customer_path(@customer) %>
+<%= button_to "編集する", edit_admin_customer_path(@customer), method: :get %>
 
-"注文履歴一覧を見る"
+<%= button_to "注文履歴一覧を見る", orders_path(@customer), method: :get %>
