--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -14,7 +14,7 @@
     <% @customers.each do |customer| %>
     <tr>
       <td><%= customer.id %></td>
-      <td><%= link_to customer.last_name, admin_customer_path(customer) %></td>
+      <td><%= link_to customer.full_name, admin_customer_path(customer) %></td>
       <td><%= customer.email %></td>
       <td>
         <% if customer.is_deleted == true %>
