--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -42,8 +42,8 @@
       <td><%= address.address %></td>
       <td><%= address.name %></td>
       <td>
-        <%= button_to "編集する", edit_address_path(address), method: :get %>
-        <%= button_to "削除する", address_path(address), { method: :delete, data: { turbo_confirm: "本当に退会しますか？" } } %>
+        <%= link_to "編集する", edit_address_path(address), method: :get, :class => "btn btn-primary ms-3" %>
+        <%= link_to "削除する", address_path(address), method: :delete, :class => "btn btn-danger ms-3", data: { confirm: "本当に削除しますか？" } %>
       </td>
     </tr>
     <% end %>
