--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -5,7 +5,7 @@
     <div class="col">
       <h2>カート商品</h2>
       <%= link_to "カート内を空にする", cart_items_destroy_all_path, method: :delete,
-                  "data-confirm" => "本当に空にしますか？", class: "btn"%>
+                  data: { confirm: "全部削除しますか？" }, class: "btn"%>
     </div>
 
     <div class="row">
