--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,40 +1,55 @@
+<div class="container py-5">
+  <%= form_with model: @customer, url: admin_customer_path(@customer) do |f| %>
+  <div class="row mt-2 mb-3 offset-1 text-center">
+ <h3><%= @customer.last_name %><%= @customer.first_name %>さんの会員情報編集</h3>
+  </div>
+  <div class="row">
+    <div class="col-10 mx-auto">
+      <table class="table table-list">
+        <tr>
+          <td>会員ID</td>
+          <td><%= @customer.id %></td>
+        </tr>
+        
+        
+        <tr>
+          <td>氏名</td>
+          <td><%= f.text_field :last_name %> <%= f.text_field :first_name %></td>
+        </tr>
 
 
-<%= form_with model: @customer, url: admin_customer_path(@customer) do |f| %>
+<tr>
+<tr>フリガナ<tr>
+<tr><%= f.text_field :last_name_kana %> <%= f.text_field :first_name_kana %><tr>
+<tr>
 
-<%= @customer.last_name %><%= @customer.first_name %>さんの会員情報編集<br/>
+<tr>
+<tr>郵便番号<tr>
+<tr><%= f.text_field :post_code %><tr>
+<tr>
+    
+<tr>
+<tr>住所<tr>
+<tr><%= f.text_field :address %><tr>
+<tr>
+    
+<tr>    
+<tr>電話番号<tr>
+<tr><%= f.text_field :phone_number %><tr>
+<tr>
 
-会員ID
-<%= @customer.id %><br/>
+<tr>
+<tr>メールアドレス<tr>
+<tr><%= f.text_field :email %><tr>
+<tr>
 
+<tr>
+<td>会員ステータス</td>
+<td><%= f.radio_button :is_deleted, false %>有効<%= f.radio_button :is_deleted, true %>退会</td>
+</tr>
 
-氏名
-<%= f.text_field :last_name %>
-
-<%= f.text_field :first_name %><br/>
-
-
-フリガナ
-<%= f.text_field :last_name_kana %>
-
-<%= f.text_field :first_name_kana %><br/>
-
-郵便番号
-<%= f.text_field :post_code %><br/>
-
-住所
-<%= f.text_field :address %><br/>
-
-電話番号
-<%= f.text_field :phone_number %><br/>
-
-メールアドレス
-<%= f.text_field :email %><br/>
-
-会員ステータス
- <%= f.radio_button :is_deleted, false %>有効<%= f.radio_button :is_deleted, true %>退会<br/>
-
-
+<tr>
 <%= f.submit "変更を保存" %>
+</tr>
 
 <% end %>
