--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,42 +1,65 @@
+<div class="container py-5">
+  
+  <div class="row mt-2 mb-3 offset-1 text-center">
+    <h3><%= @customer.last_name %><%= @customer.first_name %>さんの会員詳細</h3>
+  </div>
+  <div class="row">
+    <div class="col-10 mx-auto">
+      <table class="table table-list">
+        <tr>
+          <td>会員ID</td>
+          <td><%= @customer.id %></td>
+        </tr>
+        
+        <tr>
+          <td>氏名</td>
+          <td><%= @customer.last_name %> <%= @customer.first_name %></td>
+        </tr>
 
+        <tr>
+          <td>フリガナ</td>
+          <td><%= @customer.last_name_kana %> <%= @customer.first_name_kana %></td>
+        </tr>
 
-<%= @customer.last_name %><%= @customer.first_name %>さんの会員詳細<br/>
-
-会員ID
-<%= @customer.id %><br/>
-
-
-氏名
-<%= @customer.last_name %>
-
-<%= @customer.first_name %><br/>
-
-
-フリガナ
-<%= @customer.last_name_kana %>
-
-<%= @customer.first_name_kana %><br/>
-
-郵便番号
-<%= @customer.post_code %><br/>
-
-住所
-<%= @customer.address %><br/>
-
-電話番号
-<%= @customer.phone_number %><br/>
-
-メールアドレス
-<%= @customer.email %><br/>
-
-会員ステータス
-<% if @customer.is_deleted == true %>
-  退会
-<% else %>
-  有効
-<% end %><br/>
-
-
-<%= button_to "編集する", edit_admin_customer_path(@customer), method: :get %>
-
-<%= button_to "注文履歴一覧を見る", orders_path(@customer), method: :get %>
+        <tr>
+          <td>郵便番号</td>
+          <td><%= @customer.post_code %></td>
+        </tr>
+        
+        <tr>
+          <td>住所</td>
+          <td><%= @customer.address %></td>
+        <tr>
+          
+        <tr>
+          <td>電話番号</td>
+          <td><%= @customer.phone_number %></td>
+        </tr>
+        
+        <tr>
+          <td>メールアドレス</td>
+          <td><%= @customer.email %></td>
+        </tr>
+        
+        <tr>
+          <td>会員ステータス</td>
+          <td>
+            <% if @customer.is_deleted == true %>
+              退会
+            <% else %>
+              有効
+            <% end %>
+          </td>
+        </tr>
+      </table>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-3 offset-2">
+      <%= button_to "編集する", edit_admin_customer_path(@customer), method: :get %>
+    </div>
+    <div class="col-3">
+      <%= button_to "注文履歴一覧を見る", orders_path(@customer), method: :get %>
+    </div>
+  </div>
+</div>
