--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -36,7 +36,7 @@
           </tr>
           <tr>
             <th>請求金額</th>
-            <th><%= @order.postage + @order.total_price %></th>
+            <th><%= '@order.postage' + '@order.total_price' %></th>
           </tr>
         </tbody>
       </table>
@@ -45,7 +45,7 @@
   <div class="row">
     <div class="col-sm-12 col-md-8 col-lg-10 px-5 px-sm-0 mx-auto">
         <h5 class="pb-2 border-bottom"><strong>支払方法</strong>　<%= @order.payment_method_i18n %></h5>
-        <h5 class="pb-2 border-bottom"><strong>お届け先</strong>　<%= @order.order_address_display %>　<%= @order.name %></h5>
+        <h5 class="pb-2 border-bottom"><strong>お届け先</strong>　<%= @order.address %>　<%= @order.name %></h5>
       <%= form_with model: @order, url: orders_path, method: :post do |f| %>
         <%= f.hidden_field :customer_id %>
         <%= f.hidden_field :payment_method %>
