--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-sm-12 col-md-8 col-lg-10 px-5 px-sm-0 mx-auto">
       <h2>注文情報入力</h2>
-      <%= form_with model: @order, url: confirm_orders_path do |f| %>
+      <%= form_with model: @order, url: orders_confirm_path do |f| %>
         <div class="form-group">
           <p><strong>支払方法</strong></p>
           <%= f.radio_button :payment_method, Order.payment_methods.key(0) %>
@@ -13,22 +13,22 @@
         <div class="form-group">
           <p><strong>お届け先</strong></p>
           <div class="mb-3">
-            <%= f.radio_button :address_select, 'own_address' ,{:checked => true} %>
-            <strong><%= f.label :address_select_own_address, 'ご自身の住所' %></strong><br>
+            <%= f.radio_button :select_address, 0, {:checked => true} %>
+            <strong><%= f.label :select_address_0, 'ご自身の住所' %></strong><br>
             <div class="pl-3">
-              <h6><%= current_customer.own_adress_display %>　<%= current_customer.full_name %></h6>
+              <h6><%= current_customer.address %>　<%= current_customer.full_name %></h6>
             </div>
           </div>
           <div class="mb-3">
-            <%= f.radio_button :address_select, 'registered_address' %>
-            <strong><%= f.label :address_select_registered_address, '登録済住所から選択' %></strong><br>
+            <%= f.radio_button :select_address, 1 %>
+            <strong><%= f.label :select_address_1, '登録済住所から選択' %></strong><br>
             <div class="pl-3">
              <%= f.collection_select :address_id, current_customer.addresses.all, :id, :address_display, {}, {class: 'form-select form-control'} %>
             </div>
           </div>
           <div class="mb-3">
-            <%= f.radio_button :address_select, 'new_address' %>
-            <strong><%= f.label :address_select_new_address, '新しいお届け先' %></strong><br>
+            <%= f.radio_button :select_address, 2 %>
+            <strong><%= f.label :select_address_2, '新しいお届け先' %></strong><br>
             <div class="pl-3">
               <table>
                 <tr>
@@ -54,7 +54,7 @@
         <div class="form-group">
           <%= f.submit '確認画面に進む', class:'btn btn-primary' %>
         </div>
-        
+
       <% end %>
     </div>
   </div>
