テスト内容の担当箇所のエラー確認・一部他の担当とかぶっている箇所は残っている

--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -26,6 +26,7 @@
 
                 <td>
                   <%= link_to item_path(item.id) do %>
+                    <div class="img"><%= image_tag item.item_image, format: "jpg", size: "350x250" %></div>
                     <%= item.name %>
                   <% end %>
                 </td>
