--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -2,6 +2,10 @@
   <div class="row">
     <div class="col">
       <h4>商品一覧</h4>
+
+      <div>
+        <%=link_to "+", new_admin_item_path, class: "btn" %>
+      </div>
     </div>
   </div>
 
