--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -50,7 +50,7 @@
             <% end %>
           </tbody>
         </div>
-        <%= link_to "買い物を続ける", items_path, class: "btn"%>
+        <%= link_to "買い物を続ける", root_path, class: "btn"%>
         "合計金額"<%= @sum %>
 
         <%= link_to "情報入力に進む", new_order_path, class: "btn" %>
