--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -15,9 +15,9 @@
           <% @cart_items.each do |cart_item| %>
             <tr>
               <td><%= image_tag cart_item.item.item_image, :size => "80x80" %>　<%= cart_item.item.name %></td>
-              <td><%= cart_item.item.with_tax_price %></td>
-              <td><%= cart_item.quantity %></td>
-              <td><%= cart_item.item.with_tax_price * cart_item.quantity %></td>
+              <td><%= cart_item.item.add_tax_price %></td>
+              <td><%= cart_item.amount %></td>
+              <td><%= cart_item.item.add_tax_price * cart_item.amount %></td>
             </tr>
           <% end %>
         </tbody>
