--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
   <body>
     <header>
            <% if admin_signed_in? %>
+           <%= link_to image_tag("logo.jpg"), root_path %>
           <li>
            <%= link_to "商品一覧", admin_items_path %>
           </li>
@@ -34,6 +35,7 @@
             <%= current_customer.last_name %>
 
             
+          <%= link_to image_tag("logo.jpg"), root_path %>
           <li>
            <%= link_to "マイページ", customers_my_page_path %>
           </li>
@@ -47,6 +49,7 @@
            <%= link_to "ログアウト", destroy_customer_session_path, method: :delete %>
           </li>
             <% else %>
+           <%= link_to image_tag("logo.jpg", size: "45x45" ), root_path %>
           <li>
            <%= link_to "About", about_path %>
           </li>
