--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,16 +1,16 @@
 <!--カート内商品一覧-->
 
-<div class="container">
-  <div class="row">
-    <div class="col">
-      <h2>カート商品</h2>
-      <%= link_to "カート内を空にする", cart_items_destroy_all_path, method: :delete,
-                  data: { confirm: "全部削除しますか？" }, class: "btn"%>
-    </div>
+<div class="container px-5 px-sm-0">
+  <div class="row ">
+    <div class="col-md-9 offset-md-1">
+      <div class="d-flex aligin-items-center justify-content-between">
+        <h2>カート商品</h2>
+        <%= link_to "カート内を空にする", cart_items_destroy_all_path, method: :delete,
+                    data: { confirm: "全部削除しますか？" }, class: "btn btn-danger"%>
+      </div>
 
-    <div class="row">
-      <div class="col">
-          <div class="table">
+      <div class="mx-auto">
+          <div class="table ">
             <thead>
               <th>商品名</th>
               <th>単価（税込）</th>
@@ -50,11 +50,22 @@
             <% end %>
           </tbody>
         </div>
-        <%= link_to "買い物を続ける", root_path, class: "btn"%>
-        "合計金額"<%= @sum %>
-
-        <%= link_to "情報入力に進む", new_order_path, class: "btn" %>
       </div>
     </div>
   </div>
+
+  <div class="row">
+    <div class="col-md-9 offset-md-1">
+      <%= link_to "買い物を続ける", root_path, class: "btn"%>
+        "合計金額"<%= @sum %>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-9 offset-md-1 text-center">
+      <%= link_to "情報入力に進む", new_order_path, class: "btn" %>
+    </div>
+  </div>
+
+
 </div>
