--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -1,29 +1,37 @@
 <div class="container">
   <div class="row">
 
-    <div class="col-md-3">
-      <h4>商品詳細</h4>
-      <%= image_tag @item.item_image, size: "400x300" %>
+    <div class="row">
+        <div class="col-md-3">
+            <h4>商品詳細</h4>
+          <div class="d-flex">
+            <div class="mr-5">
+              <%= image_tag @item.item_image, size: "400x300" %>
+            </div>
+          </div>
+        </div>
     </div>
 
-    <div class="col-md-8 mt-4">
+    <div class="row">
+    <div class="col">
       <div class="table">
         <tr>
-          <td>商品名</td>
+          <td>商品名</td><br>
           <td><%= @item.name %></td>
-        </tr>
 
-        <tr>
-          <td>商品説明</td>
+
+
+          <td>商品説明</td><br>
           <td><%= @item.explanation %></td>
-        </tr>
 
-        <tr>
+
+
           <td>ジャンル</td>
+          |<br>
           <td><%= @item.genre.name %></td>
-        </tr>
 
-        <tr>
+
+
           <td>税込価格(税抜き価格)</td>
           <td><%= @item.add_tax_price %></td>
         </tr>
@@ -34,12 +42,12 @@
           <td><%= form_with model: @item_new, local:true do |f| %></td>
           <td><%= f.hidden_field :item_id, value: @item.id %></td>
           <td><%= f.select :amount, *[1..10]%></td>
-          <td><%= f.submit "カートに追加", class: "btn"%></td>
+          <td><%= f.submit "カートに追加", class: "btn btn-primary"%></td>
           <% end %>
         </tr>
       </div>
 
+     </div>
     </div>
-
   </div>
 </div>
