--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -32,11 +32,11 @@
           </tr>
           <tr>
             <th>商品合計</th>
-            <th><%= @order.total_price %></th>
+            <th>¥<%= @order.total_price.to_s(:delimited) %></th>
           </tr>
           <tr>
             <th>請求金額</th>
-            <th><%= '@order.postage' + '@order.total_price' %></th>
+            <th><%= @order.postage + @order.total_price %></th>
           </tr>
         </tbody>
       </table>
