--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,42 +1,36 @@
-<div class="container mt-5 mb-5">
-  <div class="row mt-2 mb-3 offset-1 text-center">
-    <h3 class="px-4 title-background">注文履歴一覧</h3>
-  </div>
+<div class="container">
   <div class="row">
-    <div class="col-10 mx-auto">
-      <table class="table table-list">
-        <tr class="title-background">
-          <th>注文日</th>
-          <th>配送先</th>
-          <th>注文商品</th>
-          <th>支払金額</th>
-          <th>ステータス</th>
-          <th>注文詳細</th>
-        </tr>
-        <% @orders.each do |order| %>
+    <div class="col-sm-12 col-md-8 col-lg-10 px-5 px-sm-0 mx-auto">
+      <h2>注文履歴一覧</h2>
+      <table class="table table-bordered">
+        <thread>
           <tr>
-            <th><%= order.created_at.strftime('%Y/%m/%d') %></th>
-            <th style="width: 35%">
-              〒<%= order.postal_code %></br>
-              <%= order.shipping_address %></br>
-              <%= order.name %>
-            </th>
-            <th>
-              <ul class="p-0" style="list-style: none;">
-                <% order.items.each do |item| %>
-                  <li class="m-0"><%= item.name %></li>
-                <% end %>
-              </ul>
-            </th>
-            <th><%= order.total_price.to_s(:delimited) %>円</th>
-            <th><%= order.transaction_status_i18n %></th>
-            <th>
-              <%= link_to '表示する', order_path(order), class:"btn btn-info" %>
-            </th>
+            <th>注文日</th>
+            <th>配送先</th>
+            <th>注文商品</th>
+            <th>支払金額</th>
+            <th>ステータス</th>
+            <th>注文詳細</th>
           </tr>
-        <% end %>
+        </thread>
+        <tbody>
+          <% @orders.each do |order| %>
+            <tr>
+              <th><%= order.created_at.strftime('%Y/%m/%d') %></th>
+              <th><%= order.order_address_display %><br><%= order.name %></th>
+              <th>
+                <% order.order_items.all.each do |order_item| %>
+                  <%= order_item.item.name %>
+                  <br>
+                <% end %>
+              </th>
+              <th><%= order.total_price.to_s %>円</th>
+              <th><%= order.status_i18n %></th>
+              <th><%= link_to '表示する', order_path(order.id), class:'btn btn-info' %></th>
+            </tr>
+          <% end %>
+        </tbody>
       </table>
-      <%= paginate @orders %>
     </div>
   </div>
 </div>
