--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -30,7 +30,7 @@
         <tbody>
           <tr>
             <th>商品合計</th>
-            <th><%= @order.total_price %></th>
+            <th><%= @order.total_item_amount.to_s(:delimited) %></th>
           </tr>
           <tr>
             <th>配送料</th>
@@ -38,7 +38,7 @@
           </tr>
           <tr>
             <th>ご請求額</th>
-            <th><%= @order.postage + @order.total_price %></th>
+            <th><%= @order.total_price.to_s(:delimited) %></th>
           </tr>
         </tbody>
       </table>
