--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container py-2">
   <div class="row mt-2 mb-3 offset-0 text-center">
-    <h4>会員一覧</h4>
+    <h4 class="p-2 mb-2 bg-light text-dark">会員一覧</h4>
   </div>
 
   <div class="row">
@@ -23,9 +23,9 @@
             <td><%= customer.email %></td>
             <td>
               <% if customer.is_deleted == true %>
-                <p>退会</p>
+                <p class="text-secondary">退会</p>
               <% else %>
-                <p>有効</p>
+                 <p class="text-success">有効</p>
               <% end %>
             </td>
           </tr>
