--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,57 +11,70 @@
   </head>
 
   <body>
-    <header >
-           <% if admin_signed_in? %>
-           <%= link_to image_tag("logo.jpg", size: "45x45"), root_path %>
-          <li>
-           <%= link_to "商品一覧", admin_items_path %>
+    <header class="shadow-sm p-4">
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container">
+        <a class="navbar-brand p-3"> <%= link_to image_tag("logo.jpg", size: "60x60"), root_path %></a>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav ml-auto">
+              <% if admin_signed_in? %>
+
+
+
+
+          <li class="nav-item">
+           <%= link_to "商品一覧", admin_items_path, class: "btn btn-outline-dark mr-3 ml-3" %>
           </li>
-          <li>
-           <%= link_to "顧客一覧", admin_customers_path %>
+          <li class="nav-item">
+           <%= link_to "顧客一覧", admin_customers_path, class: "btn btn-outline-dark mr-3 ml-3" %>
           </li>
-          <li>
-           <%= link_to "注文履歴一覧",admin_root_path %>
+          <li class="nav-item">
+           <%= link_to "注文履歴一覧",admin_root_path, class: "btn btn-outline-dark mr-3 ml-3" %>
           </li>
-          <li>
-           <%= link_to "ジャンル", admin_genres_path %>
+          <li class="nav-item">
+           <%= link_to "ジャンル", admin_genres_path, class: "btn btn-outline-dark mr-3 ml-3" %>
           </li>
-          <li>
-           <%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
+          <li class="nav-item">
+           <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: "btn btn-outline-dark mr-3 ml-3" %>
           </li>
             <% elsif customer_signed_in? %>
-            
-          <%= link_to image_tag("logo.jpg", size: "45x45"), root_path %>
+
           
-          <p><%= current_customer.full_name %></p>
+
+          <p class= "">ようこそ、<%= current_customer.full_name %>さん！</p>
           
-          <li>
-           <%= link_to "マイページ", customers_my_page_path %>
+          <li class="nav-item">
+           <%= link_to "マイページ", customers_my_page_path, class: "btn btn-outline-dark mr-3 ml-3" %>
           </li>
-          <li>
-           <%= link_to "商品一覧", items_path %>
+          <li class="nav-item">
+           <%= link_to "商品一覧", items_path, class: "btn btn-outline-dark mr-3 ml-3" %>
           </li>
-          <li>
-           <%= link_to "カート", cart_items_path %>
+          <li class="nav-item">
+           <%= link_to "カート", cart_items_path, class: "btn btn-outline-dark mr-3 ml-3" %>
           </li>
-          <li>
-           <%= link_to "ログアウト", destroy_customer_session_path, method: :delete %>
+          <li class="nav-item">
+           <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class: "btn btn-outline-dark mr-3 ml-3" %>
           </li>
             <% else %>
-           <%= link_to image_tag("logo.jpg", size: "45x45" ), root_path %>
-          <li>
-           <%= link_to "About", about_path %>
+            
+          
+          <li class="nav-item">
+           <%= link_to "About", about_path, class: "btn btn-outline-dark mr-3 ml-3" %>
           </li>
-          <li>
-           <%= link_to "商品一覧", items_path %>
+          <li class="nav-item">
+           <%= link_to "商品一覧", items_path, class: "btn btn-outline-dark mr-3 ml-3" %>
           </li>
-          <li>
-           <%= link_to "新規登録", new_customer_registration_path %>
+          <li class="nav-item">
+           <%= link_to "新規登録", new_customer_registration_path, class: "btn btn-outline-dark mr-3 ml-3" %>
           </li>
-          <li>
-           <%= link_to "ログイン", new_customer_session_path %>
+          <li class="nav-item">
+           <%= link_to "ログイン", new_customer_session_path, class: "btn btn-outline-dark mr-3 ml-3" %>
           </li>
         <% end %>
+        </ul>
+       </div>
+      </div>
+     </nav>
     </header>
     <%= yield %>
 
