--- a/app/views/public/addresses/edit.html.erb
+++ b/app/views/public/addresses/edit.html.erb
@@ -1,24 +1,31 @@
-<h2>配送先編集</h2>
-
-<%= form_with model: @address do |f| %>
-  
-  <div>
-  郵便番号（ハイフンなし）
-  <%= f.text_field :post_code %>
+<div class="container py-5">
+  <%= form_with model: @address do |f| %>
+  <div class="row mt-2 mb-3 offset-1 text-center" >
+    <h4 class="p-2 mb-2 bg-light text-dark">配送先編集</h4>
   </div>
-  
-  <div>
-  住所
-  <%= f.text_field :address %>
+  <div class="row">
+    <div class="col-10 mx-auto">
+      <table class="table table-list">
+        <tr>
+          <td>郵便番号（ハイフンなし）</td>
+          <td><%= f.text_field :post_code %></td>
+        </tr>
+            
+        <tr>
+          <td>住所</td>
+          <td><%= f.text_field :address %></td>
+        </tr>
+          
+        <tr>
+          <td>宛名</td>
+          <td><%= f.text_field :name %></td>
+        </tr>
+      </table>
+        
+      <div class= "text-right">
+        <button type="submit" class="btn btn-success">変更内容を保存</button>
+      </div>
+        
+    </div>
   </div>
-  
-  <div>
-  宛名
-  <%= f.text_field :name %>
-  </div>
-
-  <div>
-    <%= f.submit "変更内容を保存" %>
-  </div>
-
-<% end %>
+  <% end %>
