--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -1,52 +1,63 @@
-<h2>配送先登録/一覧</h2>
-
-<%= form_with model: @address, url: addresses_path, local: true, method: :post do |f| %>
-
-  <div>
-  郵便番号（ハイフンなし）
-  <%= f.text_field :post_code, placeholder: "0000000" %>
+<div class="container py-5">
+  <%= form_with model: @address, url: addresses_path, local: true, method: :post do |f| %>
+  <div class="row mt-2 mb-3 offset-1 text-center" >
+    <h4 class="p-2 mb-2 bg-light text-dark">配送先登録/一覧</h4>
   </div>
+  <div class="row">
+    <div class="col-10 mx-auto">
+      <table class="table table-list">
+        <tr>
+          <td>郵便番号（ハイフンなし）</td>
+          <td><%= f.text_field :post_code, placeholder: "0000000" %></td>
+        </tr>
 
-  <div>
-  住所
-  <%= f.text_field :address, placeholder: "東京都渋谷区神園町0-0" %>
+        <tr>
+          <td>住所</td>
+          <td><%= f.text_field :address, placeholder: "東京都渋谷区神園町0-0" %></td>
+        </tr>
+
+        <tr>
+          <td>宛名</td>
+          <td><%= f.text_field :name, placeholder: "令和道子" %></td>
+        </tr>
+      </table>
+
+      <div class= "text-right">
+        <button type="submit" class="btn btn-success">新規登録</button>
+      </div>
+
+    </div>
   </div>
+  <% end %>
 
-  <div>
-  宛名
-  <%= f.text_field :name, placeholder: "令和道子" %>
+
+
+  <div class="row mt-1 mb-1 offset-0 text-left">
+    <div class="col-8 mx-auto">
+      <table border="1", class="table table-list">
+        <thead>
+          <tr bgcolor="#c0c0c0">
+            <th>郵便番号</th>
+            <th>住所</th>
+            <th>宛名</th>
+            <th> </th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <% @addresses.each do |address| %>
+          <tr>
+            <td><%= address.post_code %></td>
+            <td><%= address.address %></td>
+            <td><%= address.name %></td>
+            <td>
+              <%= link_to "編集する", edit_address_path(address), method: :get, :class => "btn btn-success ms-1" %>
+              <%= link_to "削除する", address_path(address), method: :delete, :class => "btn btn-danger ms-1", data: { confirm: "本当に削除しますか？" } %>
+            </td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
   </div>
-
-  <div>
-  <%= f.submit "新規登録" %>
-  </div>
-<% end %>
-
-
-
-
-<table border="1">
-  <thead>
-    <tr bgcolor="#c0c0c0">
-      <th>郵便番号</th>
-      <th>住所</th>
-      <th>宛名</th>
-      <th> </th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @addresses.each do |address| %>
-    <tr>
-      <td><%= address.post_code %></td>
-      <td><%= address.address %></td>
-      <td><%= address.name %></td>
-      <td>
-        <%= link_to "編集する", edit_address_path(address), method: :get, :class => "btn btn-primary ms-3" %>
-        <%= link_to "削除する", address_path(address), method: :delete, :class => "btn btn-danger ms-3", data: { confirm: "本当に削除しますか？" } %>
-      </td>
-    </tr>
-    <% end %>
-  </tbody>
-</table>
 
