--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -4,65 +4,61 @@
 <%= form_with model: resource, url: customer_registration_path do |f| %>
   <%= render "public/shared/error_messages", resource: resource %>
 
-  <div>名前</div>
 
-   <div class="field">
-    (姓)
+  <div>
+    <%= f.label :"名前", class: "ml-3 mr-1 control-label col-md-2 justify-content-start" %>
+
+    <%= f.label :"(姓)", class: "ml-2 mr-2 control-label" %>
     <%= f.text_field :last_name, placeholder: "令和", autofocus: true, autocomplete: "last_name" %>
-  </div>
-  
-     <div class="field">
-    (名)
+
+    <%= f.label :"(名)", class: "ml-2 mr-2 control-label" %>
     <%= f.text_field :first_name, placeholder: "道子", autofocus: true, autocomplete: "first_name" %>
   </div>
-  
-  <div>フリガナ</div>
-  
-  <div class="field">
-    (セイ)
-    <%= f.text_field :last_name_kana, placeholder: "レイワ", autofocus: true, autocomplete: "last_name_kana" %>
-  </div>
-  
-     <div class="field">
-    (メイ)
-    <%= f.text_field :first_name_kana, placeholder: "ミチコ", autofocus: true, autocomplete: "first_name_kana" %>
-  </div>
 
-  <div class="field">
-    メールアドレス
+  <div>
+    <%= f.label :"フリガナ", class: "ml-3 mr-2 control-label col-md-2 justify-content-start" %>
+    <%= f.label :"(セイ)", class: "ml-2 mr-2 control-label" %>
+    <%= f.text_field :last_name_kana, placeholder: "レイワ", autofocus: true, autocomplete: "last_name_kana" %>
+
+    <%= f.label :"(メイ)", class: "ml-2 mr-2 control-label" %>
+    <%= f.text_field :first_name_kana, placeholder: "ミチコ", autofocus: true, autocomplete: "first_name_kana" %>
+   </div>
+
+  <div>
+    <%= f.label :"メールアドレス", class: "ml-3 mr-2 col-md-2 control-label justify-content-start" %>
     <%= f.email_field :email, placeholder: "sample@example.com", autofocus: true, autocomplete: "email" %>
   </div>
 
-  <div class="field">
-    郵便番号（ハイフンなし）
+
+  <div>
+    <%= f.label :"郵便番号（ハイフンなし）", class: "ml-3 mr-2 control-label col-md-2 justify-content-start" %>
     <%= f.text_field :post_code, placeholder: "0000000", autofocus: true, autocomplete: "post_code" %>
   </div>
 
-  <div class="field">
-    住所
+  <div>
+    <%= f.label :"住所", class: "ml-3 mr-2 control-label col-md-2 justify-content-start" %>
     <%= f.text_field :address, placeholder: "東京都渋谷代々木神園町0-0", autofocus: true, autocomplete: "address" %>
-  </div>
+   </div>
 
-  <div class="field">
-    電話番号（ハイフンなし）
+  <div>
+    <%= f.label :"電話番号（ハイフンなし）", class: "ml-3 mr-2 control-label col-md-2 justify-content-start" %>
     <%= f.text_field :phone_number, placeholder: "00000000000", autofocus: true, autocomplete: "phone_number" %>
   </div>
 
-  <div class="field">
-
+  <div>
     <% if @minimum_password_length %>
-    (パスワード<%= @minimum_password_length %>文字以上)
+    パスワード(<%= @minimum_password_length %>文字以上)
     <% end %>
     <%= f.password_field :password, autocomplete: "new-password" %>
   </div>
 
-  <div class="field">
-    パスワード（確認用）
+  <div>
+    <%= f.label :"パスワード（確認用）", class: "ml-3 mr-2 control-label col-md-2 justify-content-start" %>
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "新規登録" %>
+  <div>
+    <%= f.submit "新規登録", class: "btn btn-success" %>
   </div>
 <% end %>
 
