レイアウト修正 [完！]

--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -42,7 +42,7 @@
         </tr>
 
           <td>
-            <%= f.submit "新規登録", class: "btn"%>
+            <%= f.submit "新規登録", class: "btn btn-outline-success"%>
             <% end %>
           </td>
         </tr>
