--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -33,7 +33,7 @@
         </tr>
 
         <tr>
-          <td><%= link_to "編集する", edit_admin_item_path(@item), class: "btn" %></td>
+          <td><%= link_to "編集する", edit_admin_item_path(@item), class: "btn btn-link" %></td>
         </tr>
       </table>
     </div>
