--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -35,7 +35,7 @@
               <td>
                 <%= form_with model: cart_item, url: cart_item_path(cart_item.id), local: true do |f|%>
                 <%= f.select :amount, *[1..10] %>
-                <%= f.submit "変更" ,class: "btn"%>
+                <%= f.submit "変更" ,class: "btn btn-info"%>
                 <% end %>
               </td>
 
@@ -44,7 +44,7 @@
               <td><%= cart_item.subtotal %></td>
 
               <!--<td>#削除</td>-->
-              <td><%= link_to "削除", cart_item_path(cart_item.id) , method: :delete, "data-confirm" => "商品を削除しますか？", class: "btn"%></td>
+              <td><%= link_to "削除", cart_item_path(cart_item.id) , method: :delete, "data-confirm" => "商品を削除しますか？", class: "btn btn-danger"%></td>
             </tr>
             <% @sum += cart_item.subtotal%>
             <% end %>
@@ -56,14 +56,14 @@
 
   <div class="row">
     <div class="col-md-7 offset-md-1">
-      <%= link_to "買い物を続ける", root_path, class: "btn"%>
+      <%= link_to "買い物を続ける", root_path, class: "btn btn-success"%>
     </div>
     "合計金額"<%= @sum %>
   </div>
 
   <div class="row">
     <div class="col-md-9 offset-md-1 text-center">
-      <%= link_to "情報入力に進む", new_order_path, class: "btn" %>
+      <%= link_to "情報入力に進む", new_order_path, class: "btn btn-secondary" %>
     </div>
   </div>
 
