レイアウト[了！]

--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -6,7 +6,7 @@
 
     </div>
       <div class="col">
-        <%=link_to "+", new_admin_item_path, class: "btn btn-outline-info" %>
+        <%=link_to "+", new_admin_item_path, class: "btn btn-outline-success" %>
       </div>
   </div>
 
