--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -35,7 +35,7 @@
               <td>
                 <%= form_with model: cart_item, url: cart_item_path(cart_item.id), local: true do |f|%>
                 <%= f.select :amount, *[1..10] %>
-                <%= f.submit "変更" ,class: "btn btn-info"%>
+                <%= f.submit "変更" ,class: "btn btn-primary"%>
                 <% end %>
               </td>
 
@@ -63,7 +63,7 @@
 
   <div class="row">
     <div class="col-md-9 offset-md-1 text-center">
-      <%= link_to "情報入力に進む", new_order_path, class: "btn btn-secondary" %>
+      <%= link_to "情報入力に進む", new_order_path, class: "btn btn-link" %>
     </div>
   </div>
 
