--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -6,6 +6,8 @@
     </div>
 
     <div class="col-md-7 mt-4">
+
+      <%= form_with model: @item_new, local:true do |f| %>
       <table class="table">
         <tr>
           <td>商品名</td>
@@ -33,16 +35,14 @@
         </tr>
 
         <div class="table">
-        <tr>
-          <td><%= form_with model: @item_new, local:true do |f| %></td>
-          <td><%= f.hidden_field :item_id, value: @item.id %></td>
-          <td><%= f.select :amount, *[1..10]%></td>
-          <td><%= f.submit "カートに追加", class: "btn"%></td>
-          <% end %>
-        </tr>
-      </div>
-
+          <tr>
+            <td><%= f.hidden_field :item_id, value: @item.id %></td>
+            <td><%= f.select :amount, *[1..10]%></td>
+            <td><%= f.submit "カートに追加", class: "btn btn-primary"%></td>
+          </tr>
+        </div>
       </table>
+      <% end %>
     </div>
   </div>
 </div>
