--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -26,7 +26,7 @@
               </th>
               <th><%= order.total_price.to_s %>円</th>
               <th><%= order.status_i18n %></th>
-              <th><%= link_to '表示する', order_path(order.id), class:'btn btn-info' %></th>
+              <th><%= link_to '表示する', order_path(order.id), class:'btn btn-secondary' %></th>
             </tr>
           <% end %>
         </tbody>
