--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -10,11 +10,11 @@
     </tr>
   </thead>
   <tbody>
-    <% @orders.each do |orders| %>
+    <% @orders.each do |order| %>
       <tr>
-       <td><u><%= link_to order.created_at.strftime('%Y/%m/%d %H:%M/%S'), admin_order_path %></u></td>
+       <td><u><%= link_to order.created_at.strftime('%Y/%m/%d %H:%M/%S'), admin_order_path(order.id) %></u></td>
        <td><%= order.customer.full_name %></td>
-       <td><%= order.order_item.sum(:amount) %></td>
+       <td><%= order.order_details.sum(:amount) %></td>
        <td><%= order.status_i18n %></td>
       </tr>
     <% end %>
