--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -56,7 +56,7 @@
         <%= f.hidden_field :name %>
         <%= f.hidden_field :status %>
         <%= f.hidden_field :postage %>
-        <%= f.hidden_field :total_price %>
+        <%= f.hidden_field :total_price, value: @order.postage + @sum %>
         <%= f.submit '注文を確定する', class:'btn btn-success d-block mx-auto px-5' %>
       <% end %>
     </div>
