--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -17,14 +17,13 @@
           <% @orders.each do |order| %>
             <tr>
               <th><%= order.created_at.strftime('%Y/%m/%d') %></th>
-              <th><%= order.order_address_display %><br><%= order.name %></th>
+              <th><%= order.post_code %><br/><%= order.address %><br/><%= order.name %></th>
               <th>
-                <% order.order_items.all.each do |order_item| %>
-                  <%= order_item.item.name %>
-                  <br>
+                <% order.order_details.each do |order_detail| %>
+                ・<%= order_detail.item.name %>
                 <% end %>
               </th>
-              <th><%= order.total_price.to_s %>円</th>
+              <th><%= order.total_price %>円</th>
               <th><%= order.status_i18n %></th>
               <th><%= link_to '表示する', order_path(order.id), class:'btn btn-info' %></th>
             </tr>
