aboutレイアウト作成

--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,14 +1,18 @@
-
-<p>
+<div class = "container" >
+  <div class = "row">
+    <div class="col-12 text-center">
+      <p style = "font-size:15px">
     ようこそ、ながのCAKEへ！</br>
     このサイトは、ケーキ販売のECサイトになります。</br>
     会員でない方も商品の閲覧はできますが、</br>
     購入には会員登録が必要になります。</br>
 </p>
 
+    </div>
+  </div>
+</div>
+
 <h3>新着商品</h3>
-<!--下記処理が終わり次第記載<%#= render 'public/items/index' , items: @items %>-->
-<!--itemsコントローラーのindexアクションに@items = Item.order('id DESC').limit(3)の記載が必要-->
 
           <tbody>
             <div class="container">
