--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -22,7 +22,7 @@
         </tr>
       </table>
 
-      <div class= "text-right">
+      <div class= "text-right mb-5">
         <button type="submit" class="btn btn-success">新規登録</button>
       </div>
 
